--- a/Agra/public/.htaccess
+++ b/Agra/public/.htaccess
@@ -18,4 +18,6 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+    php_value upload_max_filesize 13M
 </IfModule>
