--- a/Agra/package.json
+++ b/Agra/package.json
@@ -2,17 +2,31 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "dev": "npm run development",
+        "dev2": "vite",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production",
         "build": "vite build"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
-        "axios": "^1.6.4",
+        "axios": "^1.6.8",
+        "laravel-echo": "^1.16.1",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
-        "tailwindcss": "^3.1.0",
-        "vite": "^5.0.0"
+        "pusher-js": "^8.4.0-rc2",
+        "tailwindcss": "^3.4.3",
+        "vite": "^5.0.0",
+        "webpack": "^5.91.0"
+    },
+    "dependencies": {
+        "laravel-mix": "^6.0.49",
+        "pusher": "^5.2.0"
     }
 }
