--- a/Agra/package.json
+++ b/Agra/package.json
@@ -15,12 +15,13 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
+        "autoprefixer": "^10.4.19",
         "axios": "^1.6.8",
         "daisyui": "^4.11.1",
+        "flowbite": "^2.3.0",
         "laravel-echo": "^1.16.1",
         "laravel-vite-plugin": "^1.0.0",
-        "postcss": "^8.4.31",
+        "postcss": "^8.4.38",
         "pusher-js": "^8.4.0-rc2",
         "tailwindcss": "^3.4.3",
         "vite": "^5.0.0",
