--- a/Agra/package.json
+++ b/Agra/package.json
@@ -30,6 +30,7 @@
     "dependencies": {
         "cors": "^2.8.5",
         "laravel-mix": "^6.0.49",
+        "node-fetch": "^2.7.0",
         "pusher": "^5.2.0"
     }
 }
