--- a/Agra/package.json
+++ b/Agra/package.json
@@ -28,6 +28,7 @@
         "webpack": "^5.91.0"
     },
     "dependencies": {
+        "apexcharts": "^3.49.1",
         "cors": "^2.8.5",
         "laravel-mix": "^6.0.49",
         "node-fetch": "^2.7.0",
